--- a/stldata.io/boardbill_xml adventures.ipynb
+++ b/stldata.io/boardbill_xml adventures.ipynb
@@ -163,25 +163,24 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 276,
+            "execution_count": 301,
             "source": [
                 "## Back to Basics\r\n",
                 "#-- Number of Bills (PK) [Bills] => [Count] \r\n",
-                "class btb():\r\n",
+                "class data_analysis():\r\n",
                 "    def __init__(self,df:pd.DataFrame):\r\n",
                 "        self.df = df.copy()\r\n",
-                "        self.number_of_bills = None\r\n",
-                "        self.number_of_bills_passed = None\r\n",
-                "        self.number_of_bills_not_passed = None\r\n",
-                "        self.\r\n",
-                "        print('hi')\r\n",
+                "        self.number_of_bills = len(df)\r\n",
+                "        self.number_of_bills_passed = len(df['Passed']==True)\r\n",
+                "        self.number_of_bills_not_passed = len(df['Passed']==False)\r\n",
+                "\r\n",
+                "        self.bills_passed_df = df.get(df['Passed']==True)\r\n",
+                "        self._groupby_example = df[['Passed', 'Board Bill']].groupby(['Passed']).count().copy().at[False,'Board Bill']\r\n",
+                "        print('Data Analysis Complete')\r\n",
                 "\r\n",
                 "\r\n",
-                "btb_btb = btb(boardbill_df)\r\n",
-                "btb_btb.billcount = boardbill_df['Board Bill'].count()\r\n",
-                "btb_btb.number_of_bills_passed =  boardbill_df[['Passed', 'Board Bill']].groupby(['Passed']).count().copy().at[True,'Board Bill']\r\n",
-                "btb_btb.number_of_bills_not_passed =  boardbill_df[['Passed', 'Board Bill']].groupby(['Passed']).count().copy().at[False,'Board Bill']\r\n",
-                "btb_btb.session_ward_bills_passed_df\r\n",
+                "bb_data_analysis = data_analysis(boardbill_df)\r\n",
+                "\r\n",
                 "\r\n"
             ],
             "outputs": [
@@ -189,8 +188,28 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "hi\n"
+                        "Data Analysis Complete\n"
                     ]
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 299,
+            "source": [
+                "len(btb_btb.session_ward_bills_passed_df)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "1369"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 299
                 }
             ],
             "metadata": {}
@@ -340,67 +359,6 @@
                     },
                     "metadata": {},
                     "execution_count": 280
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 278,
-            "source": [
-                "analysis_2_df = boardbill_df[['Session','Passed', 'Board Bill']].copy()\r\n",
-                "analysis_2_df['Board Bill']\r\n",
-                "#analysis_2_df['Count'] = analysis_2_df.groupby(by=['Session','Passed']).transform('count')\r\n"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "0         1\n",
-                            "1        10\n",
-                            "2       100\n",
-                            "3       101\n",
-                            "4       102\n",
-                            "       ... \n",
-                            "1679     82\n",
-                            "1680     83\n",
-                            "1681     84\n",
-                            "1682     85\n",
-                            "1683      9\n",
-                            "Name: Board Bill, Length: 1684, dtype: object"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 278
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 279,
-            "source": [
-                "#Analysis 2: How much more effective is the president vs the average alderman\r\n",
-                "analysis_2_df = raw_boardbill_df[['Session','Ward','Bill_Passed']].copy()\r\n",
-                "\r\n",
-                "analysis_2_df\r\n",
-                "\r\n"
-            ],
-            "outputs": [
-                {
-                    "output_type": "error",
-                    "ename": "KeyError",
-                    "evalue": "\"['Bill_Passed'] not in index\"",
-                    "traceback": [
-                        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-                        "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7460/2234589257.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Analysis 2: How much more effective is the president vs the average alderman\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0manalysis_2_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mraw_boardbill_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Session'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Ward'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Bill_Passed'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0manalysis_2_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-                        "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3459\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3460\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3461\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3462\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3463\u001b[0m         \u001b[1;31m# take() does not accept boolean indexers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-                        "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1312\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1313\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1314\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1315\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1316\u001b[0m         if needs_i8_conversion(ax.dtype) or isinstance(\n",
-                        "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[1;34m(self, key, indexer, axis)\u001b[0m\n\u001b[0;32m   1375\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1376\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1377\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{not_found} not in index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1378\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1379\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-                        "\u001b[1;31mKeyError\u001b[0m: \"['Bill_Passed'] not in index\""
-                    ]
                 }
             ],
             "metadata": {}
