get rid of go, add scales to midi

--- a/Projects/Creative Programming/midi_testing.ipynb
+++ b/Projects/Creative Programming/midi_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " 'G#': [8, 20, 32, 44, 56, 68, 80, 92, 104, 116]}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        " 'Gb': [6, 18, 30, 42, 54, 66, 78, 90, 102, 114, 126]}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,23 +237,21 @@
     "\n",
     "scales = {}\n",
     "\n",
-    "\n",
     "scales.update({'C':['C','D','E','F','G','A','B']})\n",
     "scales.update({'G':['G','A','B','C','D','E','F#']})\n",
     "scales.update({'D':['D','E','F#','G','A','B','C#']})\n",
     "scales.update({'A':['A','B','C#','D','E','F#','G#']})\n",
     "scales.update({'E':['E','F#','G#','A','B','C#','D#']})\n",
     "scales.update({'B':['B','C#','D#','E','F#','G#','D#']})\n",
-    "scales.update({'E':['E','F#','G#','A','B','C#','D#']})\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "scales.update({'F#':['F#','G#','A#','B','C#','D#','F']})\n",
+    "scales.update({'C#':['C#','D#','E#','F#','G#','A#','B#']})\n",
+    "scales.update({'F':['F','G','A','A#','C','D','E']})\n",
+    "scales.update({'Bb':['A#','C','D','D#','F','G','A']})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +297,6 @@
     "\n",
     "\n",
     "def build_midi_section(phrase:object):\n",
-    "    \n",
     "    for i in range(phrase.phrase_length):\n",
     "        midi_message = mido.Message('note_on')\n",
     "        #midi_message = midi_message.copy(note=(random.randrange(start=0,stop=128)))\n",
@@ -349,73 +346,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[67, 79, 91, 103, 69, 81, 93, 105, 59, 71, 83, 95, 107, 60, 72, 84, 96, 108, 62, 74, 86, 98, 64, 76, 88, 100, 66, 78, 90, 102]\n",
-      "[120, 117, 119]\n",
+      "[30, 42, 54, 32, 44, 56, 34, 46, 58, 35, 47, 59, 37, 49, 61, 27, 39, 51, 63, 29, 41, 53]\n",
+      "[69, 81, 93, 105, 117, 71, 83, 95, 107, 119, 73, 85, 97, 109, 121, 74, 86, 98, 110, 122, 76, 88, 100, 112, 78, 90, 102, 114, 68, 80, 92, 104, 116]\n",
       "MidiFile(type=1, ticks_per_beat=480, tracks=[\n",
       "  MidiTrack([\n",
       "    MetaMessage('track_name', name='Amazing', time=0),\n",
-      "    Message('note_on', channel=10, note=71, velocity=19, time=102),\n",
-      "    Message('note_on', channel=11, note=67, velocity=11, time=78),\n",
-      "    Message('note_on', channel=5, note=69, velocity=24, time=19),\n",
-      "    Message('note_on', channel=13, note=62, velocity=4, time=80),\n",
-      "    Message('note_on', channel=8, note=102, velocity=11, time=126),\n",
-      "    Message('note_on', channel=10, note=79, velocity=83, time=20),\n",
-      "    Message('note_on', channel=13, note=78, velocity=32, time=50),\n",
-      "    Message('note_on', channel=11, note=69, velocity=83, time=39),\n",
-      "    Message('note_on', channel=14, note=59, velocity=24, time=78),\n",
-      "    Message('note_on', channel=9, note=96, velocity=81, time=60),\n",
-      "    Message('note_on', channel=3, note=105, velocity=50, time=129),\n",
-      "    Message('note_on', channel=6, note=91, velocity=24, time=123),\n",
-      "    Message('note_on', channel=14, note=107, velocity=57, time=81),\n",
-      "    Message('note_on', channel=11, note=59, velocity=82, time=38),\n",
-      "    Message('note_on', channel=9, note=98, velocity=95, time=86),\n",
-      "    Message('note_on', channel=13, note=105, velocity=65, time=81),\n",
-      "    Message('note_on', channel=4, note=84, velocity=30, time=76),\n",
-      "    Message('note_on', channel=14, note=96, velocity=22, time=55),\n",
-      "    Message('note_on', channel=5, note=88, velocity=77, time=0),\n",
-      "    Message('note_on', channel=7, note=76, velocity=92, time=139),\n",
-      "    Message('note_on', channel=9, note=119, velocity=91, time=45),\n",
-      "    Message('note_on', channel=1, note=120, velocity=66, time=71),\n",
-      "    Message('note_on', channel=1, note=117, velocity=70, time=139),\n",
-      "    Message('note_on', channel=9, note=119, velocity=8, time=62),\n",
-      "    Message('note_on', channel=4, note=119, velocity=9, time=82),\n",
-      "    Message('note_on', channel=5, note=120, velocity=50, time=104),\n",
-      "    Message('note_on', channel=10, note=117, velocity=75, time=31),\n",
-      "    Message('note_on', channel=12, note=117, velocity=58, time=115),\n",
-      "    Message('note_on', channel=5, note=120, velocity=32, time=118),\n",
-      "    Message('note_on', channel=13, note=117, velocity=30, time=120),\n",
-      "    Message('note_on', channel=5, note=119, velocity=23, time=78),\n",
-      "    Message('note_on', channel=7, note=120, velocity=31, time=3),\n",
-      "    Message('note_on', channel=2, note=119, velocity=12, time=116),\n",
-      "    Message('note_on', channel=12, note=120, velocity=1, time=66),\n",
-      "    Message('note_on', channel=4, note=117, velocity=27, time=115),\n",
-      "    Message('note_on', channel=10, note=71, velocity=19, time=83),\n",
-      "    Message('note_on', channel=11, note=67, velocity=11, time=131),\n",
-      "    Message('note_on', channel=5, note=69, velocity=24, time=57),\n",
-      "    Message('note_on', channel=13, note=62, velocity=4, time=115),\n",
-      "    Message('note_on', channel=8, note=102, velocity=11, time=19),\n",
-      "    Message('note_on', channel=10, note=79, velocity=83, time=121),\n",
-      "    Message('note_on', channel=13, note=78, velocity=32, time=77),\n",
-      "    Message('note_on', channel=11, note=69, velocity=83, time=139),\n",
-      "    Message('note_on', channel=14, note=59, velocity=24, time=14),\n",
-      "    Message('note_on', channel=9, note=96, velocity=81, time=71),\n",
-      "    Message('note_on', channel=3, note=105, velocity=50, time=29),\n",
-      "    Message('note_on', channel=6, note=91, velocity=24, time=2),\n",
-      "    Message('note_on', channel=14, note=107, velocity=57, time=87),\n",
-      "    Message('note_on', channel=11, note=59, velocity=82, time=73),\n",
-      "    Message('note_on', channel=9, note=98, velocity=95, time=55),\n",
-      "    Message('note_on', channel=13, note=105, velocity=65, time=62),\n",
-      "    Message('note_on', channel=4, note=84, velocity=30, time=12),\n",
-      "    Message('note_on', channel=14, note=96, velocity=22, time=54),\n",
-      "    Message('note_on', channel=5, note=88, velocity=77, time=2),\n",
-      "    Message('note_on', channel=7, note=76, velocity=92, time=101)])\n",
+      "    Message('note_on', channel=6, note=37, velocity=69, time=30),\n",
+      "    Message('note_on', channel=8, note=35, velocity=44, time=92),\n",
+      "    Message('note_on', channel=5, note=53, velocity=4, time=1),\n",
+      "    Message('note_on', channel=9, note=51, velocity=80, time=88),\n",
+      "    Message('note_on', channel=14, note=41, velocity=58, time=46),\n",
+      "    Message('note_on', channel=4, note=46, velocity=93, time=76),\n",
+      "    Message('note_on', channel=4, note=27, velocity=40, time=81),\n",
+      "    Message('note_on', channel=2, note=63, velocity=82, time=37),\n",
+      "    Message('note_on', channel=2, note=27, velocity=9, time=69),\n",
+      "    Message('note_on', channel=10, note=58, velocity=23, time=24),\n",
+      "    Message('note_on', channel=14, note=39, velocity=21, time=106),\n",
+      "    Message('note_on', channel=12, note=61, velocity=76, time=58),\n",
+      "    Message('note_on', channel=7, note=35, velocity=91, time=22),\n",
+      "    Message('note_on', channel=10, note=61, velocity=61, time=23),\n",
+      "    Message('note_on', channel=12, note=53, velocity=92, time=105),\n",
+      "    Message('note_on', channel=11, note=54, velocity=93, time=16),\n",
+      "    Message('note_on', channel=7, note=27, velocity=98, time=54),\n",
+      "    Message('note_on', channel=13, note=27, velocity=76, time=138),\n",
+      "    Message('note_on', channel=14, note=27, velocity=25, time=90),\n",
+      "    Message('note_on', channel=9, note=30, velocity=16, time=45),\n",
+      "    Message('note_on', channel=11, note=112, velocity=72, time=44),\n",
+      "    Message('note_on', channel=11, note=97, velocity=67, time=70),\n",
+      "    Message('note_on', channel=5, note=117, velocity=19, time=120),\n",
+      "    Message('note_on', channel=11, note=93, velocity=66, time=49),\n",
+      "    Message('note_on', channel=8, note=105, velocity=2, time=111),\n",
+      "    Message('note_on', channel=4, note=117, velocity=72, time=58),\n",
+      "    Message('note_on', channel=1, note=107, velocity=89, time=61),\n",
+      "    Message('note_on', channel=12, note=80, velocity=74, time=98),\n",
+      "    Message('note_on', channel=12, note=88, velocity=78, time=86),\n",
+      "    Message('note_on', channel=1, note=83, velocity=21, time=113),\n",
+      "    Message('note_on', channel=9, note=69, velocity=62, time=38),\n",
+      "    Message('note_on', channel=1, note=121, velocity=24, time=14),\n",
+      "    Message('note_on', channel=5, note=119, velocity=10, time=46),\n",
+      "    Message('note_on', channel=5, note=109, velocity=97, time=98),\n",
+      "    Message('note_on', channel=1, note=95, velocity=12, time=17),\n",
+      "    Message('note_on', channel=6, note=37, velocity=69, time=33),\n",
+      "    Message('note_on', channel=8, note=35, velocity=44, time=91),\n",
+      "    Message('note_on', channel=5, note=53, velocity=4, time=42),\n",
+      "    Message('note_on', channel=9, note=51, velocity=80, time=45),\n",
+      "    Message('note_on', channel=14, note=41, velocity=58, time=52),\n",
+      "    Message('note_on', channel=4, note=46, velocity=93, time=91),\n",
+      "    Message('note_on', channel=4, note=27, velocity=40, time=89),\n",
+      "    Message('note_on', channel=2, note=63, velocity=82, time=127),\n",
+      "    Message('note_on', channel=2, note=27, velocity=9, time=20),\n",
+      "    Message('note_on', channel=10, note=58, velocity=23, time=41),\n",
+      "    Message('note_on', channel=14, note=39, velocity=21, time=136),\n",
+      "    Message('note_on', channel=12, note=61, velocity=76, time=110),\n",
+      "    Message('note_on', channel=7, note=35, velocity=91, time=96),\n",
+      "    Message('note_on', channel=10, note=61, velocity=61, time=34),\n",
+      "    Message('note_on', channel=12, note=53, velocity=92, time=129),\n",
+      "    Message('note_on', channel=11, note=54, velocity=93, time=122),\n",
+      "    Message('note_on', channel=7, note=27, velocity=98, time=86),\n",
+      "    Message('note_on', channel=13, note=27, velocity=76, time=90),\n",
+      "    Message('note_on', channel=14, note=27, velocity=25, time=15),\n",
+      "    Message('note_on', channel=9, note=30, velocity=16, time=127)])\n",
       "])\n"
      ]
     }
@@ -443,17 +440,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pygame.init()\n",
-    "pygame.mixer.music.load(r\"new_song.mid\")\n",
-    "pygame.mixer.music.play()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -461,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +472,7 @@
        " 'Gb': [6, 18, 30, 42, 54, 66, 78, 90, 102, 114, 126]}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
