--- a/Projects/Creative Programming/midi_testing.ipynb
+++ b/Projects/Creative Programming/midi_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " 'G#': [8, 20, 32, 44, 56, 68, 80, 92, 104, 116]}"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        " 'Gb': [6, 18, 30, 42, 54, 66, 78, 90, 102, 114, 126]}"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: Develop a way to generate time signatures\n",
+    "#Add time signatures\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,73 +356,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30, 42, 54, 32, 44, 56, 34, 46, 58, 35, 47, 59, 37, 49, 61, 27, 39, 51, 63, 29, 41, 53]\n",
-      "[69, 81, 93, 105, 117, 71, 83, 95, 107, 119, 73, 85, 97, 109, 121, 74, 86, 98, 110, 122, 76, 88, 100, 112, 78, 90, 102, 114, 68, 80, 92, 104, 116]\n",
+      "[91, 93]\n",
+      "[66, 56, 68, 58, 70, 59, 71, 61, 73, 63, 65]\n",
       "MidiFile(type=1, ticks_per_beat=480, tracks=[\n",
       "  MidiTrack([\n",
       "    MetaMessage('track_name', name='Amazing', time=0),\n",
-      "    Message('note_on', channel=6, note=37, velocity=69, time=30),\n",
-      "    Message('note_on', channel=8, note=35, velocity=44, time=92),\n",
-      "    Message('note_on', channel=5, note=53, velocity=4, time=1),\n",
-      "    Message('note_on', channel=9, note=51, velocity=80, time=88),\n",
-      "    Message('note_on', channel=14, note=41, velocity=58, time=46),\n",
-      "    Message('note_on', channel=4, note=46, velocity=93, time=76),\n",
-      "    Message('note_on', channel=4, note=27, velocity=40, time=81),\n",
-      "    Message('note_on', channel=2, note=63, velocity=82, time=37),\n",
-      "    Message('note_on', channel=2, note=27, velocity=9, time=69),\n",
-      "    Message('note_on', channel=10, note=58, velocity=23, time=24),\n",
-      "    Message('note_on', channel=14, note=39, velocity=21, time=106),\n",
-      "    Message('note_on', channel=12, note=61, velocity=76, time=58),\n",
-      "    Message('note_on', channel=7, note=35, velocity=91, time=22),\n",
-      "    Message('note_on', channel=10, note=61, velocity=61, time=23),\n",
-      "    Message('note_on', channel=12, note=53, velocity=92, time=105),\n",
-      "    Message('note_on', channel=11, note=54, velocity=93, time=16),\n",
-      "    Message('note_on', channel=7, note=27, velocity=98, time=54),\n",
-      "    Message('note_on', channel=13, note=27, velocity=76, time=138),\n",
-      "    Message('note_on', channel=14, note=27, velocity=25, time=90),\n",
-      "    Message('note_on', channel=9, note=30, velocity=16, time=45),\n",
-      "    Message('note_on', channel=11, note=112, velocity=72, time=44),\n",
-      "    Message('note_on', channel=11, note=97, velocity=67, time=70),\n",
-      "    Message('note_on', channel=5, note=117, velocity=19, time=120),\n",
-      "    Message('note_on', channel=11, note=93, velocity=66, time=49),\n",
-      "    Message('note_on', channel=8, note=105, velocity=2, time=111),\n",
-      "    Message('note_on', channel=4, note=117, velocity=72, time=58),\n",
-      "    Message('note_on', channel=1, note=107, velocity=89, time=61),\n",
-      "    Message('note_on', channel=12, note=80, velocity=74, time=98),\n",
-      "    Message('note_on', channel=12, note=88, velocity=78, time=86),\n",
-      "    Message('note_on', channel=1, note=83, velocity=21, time=113),\n",
-      "    Message('note_on', channel=9, note=69, velocity=62, time=38),\n",
-      "    Message('note_on', channel=1, note=121, velocity=24, time=14),\n",
-      "    Message('note_on', channel=5, note=119, velocity=10, time=46),\n",
-      "    Message('note_on', channel=5, note=109, velocity=97, time=98),\n",
-      "    Message('note_on', channel=1, note=95, velocity=12, time=17),\n",
-      "    Message('note_on', channel=6, note=37, velocity=69, time=33),\n",
-      "    Message('note_on', channel=8, note=35, velocity=44, time=91),\n",
-      "    Message('note_on', channel=5, note=53, velocity=4, time=42),\n",
-      "    Message('note_on', channel=9, note=51, velocity=80, time=45),\n",
-      "    Message('note_on', channel=14, note=41, velocity=58, time=52),\n",
-      "    Message('note_on', channel=4, note=46, velocity=93, time=91),\n",
-      "    Message('note_on', channel=4, note=27, velocity=40, time=89),\n",
-      "    Message('note_on', channel=2, note=63, velocity=82, time=127),\n",
-      "    Message('note_on', channel=2, note=27, velocity=9, time=20),\n",
-      "    Message('note_on', channel=10, note=58, velocity=23, time=41),\n",
-      "    Message('note_on', channel=14, note=39, velocity=21, time=136),\n",
-      "    Message('note_on', channel=12, note=61, velocity=76, time=110),\n",
-      "    Message('note_on', channel=7, note=35, velocity=91, time=96),\n",
-      "    Message('note_on', channel=10, note=61, velocity=61, time=34),\n",
-      "    Message('note_on', channel=12, note=53, velocity=92, time=129),\n",
-      "    Message('note_on', channel=11, note=54, velocity=93, time=122),\n",
-      "    Message('note_on', channel=7, note=27, velocity=98, time=86),\n",
-      "    Message('note_on', channel=13, note=27, velocity=76, time=90),\n",
-      "    Message('note_on', channel=14, note=27, velocity=25, time=15),\n",
-      "    Message('note_on', channel=9, note=30, velocity=16, time=127)])\n",
+      "    Message('note_on', channel=2, note=93, velocity=46, time=1221),\n",
+      "    Message('note_on', channel=2, note=91, velocity=5, time=1182),\n",
+      "    Message('note_on', channel=11, note=91, velocity=96, time=348),\n",
+      "    Message('note_on', channel=14, note=91, velocity=21, time=1083),\n",
+      "    Message('note_on', channel=2, note=93, velocity=47, time=1005),\n",
+      "    Message('note_on', channel=4, note=91, velocity=22, time=256),\n",
+      "    Message('note_on', channel=13, note=93, velocity=61, time=589),\n",
+      "    Message('note_on', channel=7, note=93, velocity=87, time=1117),\n",
+      "    Message('note_on', channel=1, note=93, velocity=73, time=701),\n",
+      "    Message('note_on', channel=9, note=93, velocity=28, time=38),\n",
+      "    Message('note_on', channel=2, note=91, velocity=37, time=1005),\n",
+      "    Message('note_on', channel=11, note=91, velocity=81, time=29),\n",
+      "    Message('note_on', channel=4, note=93, velocity=78, time=1204),\n",
+      "    Message('note_on', channel=10, note=91, velocity=49, time=676),\n",
+      "    Message('note_on', channel=12, note=91, velocity=54, time=976),\n",
+      "    Message('note_on', channel=8, note=93, velocity=80, time=74),\n",
+      "    Message('note_on', channel=4, note=93, velocity=50, time=1169),\n",
+      "    Message('note_on', channel=7, note=93, velocity=37, time=630),\n",
+      "    Message('note_on', channel=13, note=93, velocity=75, time=975),\n",
+      "    Message('note_on', channel=5, note=93, velocity=84, time=379),\n",
+      "    Message('note_on', channel=7, note=70, velocity=75, time=147),\n",
+      "    Message('note_on', channel=12, note=68, velocity=83, time=550),\n",
+      "    Message('note_on', channel=7, note=56, velocity=87, time=581),\n",
+      "    Message('note_on', channel=6, note=71, velocity=41, time=322),\n",
+      "    Message('note_on', channel=2, note=56, velocity=2, time=1218),\n",
+      "    Message('note_on', channel=13, note=63, velocity=50, time=1376),\n",
+      "    Message('note_on', channel=10, note=58, velocity=85, time=686),\n",
+      "    Message('note_on', channel=13, note=59, velocity=63, time=1078),\n",
+      "    Message('note_on', channel=8, note=68, velocity=55, time=1190),\n",
+      "    Message('note_on', channel=1, note=73, velocity=30, time=270),\n",
+      "    Message('note_on', channel=9, note=59, velocity=71, time=136),\n",
+      "    Message('note_on', channel=12, note=73, velocity=57, time=126),\n",
+      "    Message('note_on', channel=3, note=70, velocity=65, time=424),\n",
+      "    Message('note_on', channel=10, note=58, velocity=55, time=646),\n",
+      "    Message('note_on', channel=8, note=61, velocity=20, time=639),\n",
+      "    Message('note_on', channel=2, note=93, velocity=46, time=80),\n",
+      "    Message('note_on', channel=2, note=91, velocity=5, time=128),\n",
+      "    Message('note_on', channel=11, note=91, velocity=96, time=133),\n",
+      "    Message('note_on', channel=14, note=91, velocity=21, time=48),\n",
+      "    Message('note_on', channel=2, note=93, velocity=47, time=118),\n",
+      "    Message('note_on', channel=4, note=91, velocity=22, time=113),\n",
+      "    Message('note_on', channel=13, note=93, velocity=61, time=104),\n",
+      "    Message('note_on', channel=7, note=93, velocity=87, time=14),\n",
+      "    Message('note_on', channel=1, note=93, velocity=73, time=35),\n",
+      "    Message('note_on', channel=9, note=93, velocity=28, time=100),\n",
+      "    Message('note_on', channel=2, note=91, velocity=37, time=61),\n",
+      "    Message('note_on', channel=11, note=91, velocity=81, time=117),\n",
+      "    Message('note_on', channel=4, note=93, velocity=78, time=104),\n",
+      "    Message('note_on', channel=10, note=91, velocity=49, time=48),\n",
+      "    Message('note_on', channel=12, note=91, velocity=54, time=103),\n",
+      "    Message('note_on', channel=8, note=93, velocity=80, time=59),\n",
+      "    Message('note_on', channel=4, note=93, velocity=50, time=132),\n",
+      "    Message('note_on', channel=7, note=93, velocity=37, time=72),\n",
+      "    Message('note_on', channel=13, note=93, velocity=75, time=41),\n",
+      "    Message('note_on', channel=5, note=93, velocity=84, time=80)])\n",
       "])\n"
      ]
     }
@@ -447,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +482,7 @@
        " 'Gb': [6, 18, 30, 42, 54, 66, 78, 90, 102, 114, 126]}"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
